--- a/html-basic/index.html
+++ b/html-basic/index.html
@@ -6,6 +6,8 @@
     <title>HTML Introduction</title>
 </head>
 <body>
+    <article>
+    <section>
     <h1>Hello World</h1>
     <p> This the First paragraph</p>
 
@@ -16,8 +18,54 @@
     <p>This is the third paragraph</p><br>
 
     <p>This is an ALX image link<a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="An image Link">ALX Logo</a></p>
+    </section>
 
-    <p></p><a href="tweets.html">twets.html</a></p>
+    <p></p><a href="tweets.html">tweets.html</a></p>
+    
+   
 
+    <table>
+        <caption>Showing a list of olympic participants</caption>
+
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Country</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr></tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+        </tr>
+
+            <tr>
+                <td>Emily</td>
+                <td>28</td>
+                <td>Canada</td>
+            </tr> 
+            <tr>
+                <td>Michael</td>
+                <td>32</td>
+                <td>Australia</td>
+            </tr>
+            <tr>
+                <td>Sofia</td>
+                <td>21</td>
+                <td>UK</td>
+            </tr>
+            <tfoot>
+                <tr>
+                    <td colspan="4">Total participants="34"</td>
+                </tr>
+            </tfoot>
+        </tbody>
+
+     
+    </table>
+ </article>
 </body>
 </html>
